# MGL7460-Projet_2_Cpp

./: .gitignore
MGL7460_Projet_2_Cpp/: CMakeLists.txt  MGL7460_Projet_2_Cpp.sln  sonar-project.properties
MGL7460_Projet_2_Cpp/Debug/: MGL7460_Projet_2_Cpp.ilk  MGL7460_Projet_2_Cpp_Tests.exe.gta.testdurations  MGL7460_Projet_2_Cpp_Tests.ilk
MGL7460_Projet_2_Cpp/MGL7460_Projet_2_Cpp/: CMakeLists.txt  MGL7460_Projet_2_Cpp.cpp  MGL7460_Projet_2_Cpp.vcxproj  MGL7460_Projet_2_Cpp.vcxproj.filters
MGL7460_Projet_2_Cpp/MGL7460_Projet_2_Cpp/Debug/: MGL7460_Projet_2_Cpp.exe.recipe  MGL7460_Projet_2_Cpp.ilk  MGL7460_Projet_2_Cpp.vcxproj.FileListAbsolute.txt  vc142.idb
MGL7460_Projet_2_Cpp/MGL7460_Projet_2_Cpp/Debug/MGL7460_.978962e1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MGL7460_Projet_2_Cpp.lastbuildstate  MGL7460_Projet_2_Cpp.read.1u.tlog  MGL7460_Projet_2_Cpp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MGL7460_Projet_2_Cpp/MGL7460_Projet_2_Cpp/x64/Debug/: MGL7460_Projet_2_Cpp.exe.recipe  MGL7460_Projet_2_Cpp.vcxproj.FileListAbsolute.txt  vc142.idb
MGL7460_Projet_2_Cpp/MGL7460_Projet_2_Cpp/x64/Debug/MGL7460_.978962e1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MGL7460_Projet_2_Cpp.lastbuildstate  MGL7460_Projet_2_Cpp.read.1u.tlog  MGL7460_Projet_2_Cpp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MGL7460_Projet_2_Cpp/MGL7460_Projet_2_Cpp/x64/Release/: MGL7460_Projet_2_Cpp.exe.recipe  MGL7460_Projet_2_Cpp.vcxproj.FileListAbsolute.txt
MGL7460_Projet_2_Cpp/MGL7460_Projet_2_Cpp/x64/Release/MGL7460_.978962e1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MGL7460_Projet_2_Cpp.lastbuildstate  MGL7460_Projet_2_Cpp.read.1u.tlog  MGL7460_Projet_2_Cpp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MGL7460_Projet_2_Cpp/MGL7460_Projet_2_Cpp_Tests/: CMakeLists.txt  MGL7460_Projet_2_Cpp_Tests.vcxproj  test.cpp
MGL7460_Projet_2_Cpp/MGL7460_Projet_2_Cpp_Tests/Debug/: MGL7460_Projet_2_Cpp_Tests.exe.recipe  MGL7460_Projet_2_Cpp_Tests.vcxproj.FileListAbsolute.txt
MGL7460_Projet_2_Cpp/MGL7460_Projet_2_Cpp_Tests/Debug/MGL7460_.952d848e.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MGL7460_Projet_2_Cpp_Tests.read.1u.tlog  MGL7460_Projet_2_Cpp_Tests.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MGL7460_Projet_2_Cpp/MGL7460_Projet_2_Cpp_Tests/x64/Debug/: MGL7460_Projet_2_Cpp_Tests.exe.recipe  MGL7460_Projet_2_Cpp_Tests.vcxproj.FileListAbsolute.txt
MGL7460_Projet_2_Cpp/MGL7460_Projet_2_Cpp_Tests/x64/Debug/MGL7460_.952d848e.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MGL7460_Projet_2_Cpp_Tests.read.1u.tlog  MGL7460_Projet_2_Cpp_Tests.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MGL7460_Projet_2_Cpp/distant/: CMakeLists.txt
MGL7460_Projet_2_Cpp/x64/Debug/: MGL7460_Projet_2_Cpp.ilk  MGL7460_Projet_2_Cpp_Tests.exe.gta.testdurations  MGL7460_Projet_2_Cpp_Tests.ilk
MGL7460_Projet_2_Cpp/x64/Release/: MGL7460_Projet_2_Cpp.iobj  MGL7460_Projet_2_Cpp.ipdb
